--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -109,8 +109,8 @@ ls:
     STARTED_BY: taskmaster
     ANSWER: 42
 
-cat:
-  cmd: "/usr/bin/cat"
+ping:
+  cmd: "/usr/bin/ping 8.8.8.8"
   numprocs: 1
   umask: 022
   workingdir: /home
