--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -95,7 +95,7 @@ ls:
   umask: 022
   workingdir: /home
   autostart: true
-  autorestart: false
+  autorestart: true
   exitcodes:
     - 0
     - 2
@@ -111,7 +111,7 @@ ls:
 
 ping:
   cmd: "/usr/bin/ping 8.8.8.8"
-  numprocs: 3
+  numprocs: 1
   umask: 077
   workingdir: /home
   autostart: true
@@ -120,7 +120,7 @@ ping:
     - 0
     - 2
   startretries: 2
-  starttime: 5
+  starttime: 2
   stopsignal: TERM
   stoptime: 10
   stdout: /tmp/ping.stdout
